Feature forget password

--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>katastima</title>
+    <title>SM (Store Managments)</title>
   </head>
   <body id="js-body">
 
-    <div id="js-root" class="d-flex flex-column flex-root"></div>
+    <div id="js-root"></div>
 
     <div id="js-splash-screen">
       <img
